--- a/vignettes/spectraltad.Rmd
+++ b/vignettes/spectraltad.Rmd
@@ -29,7 +29,7 @@ The package is based around the windowed spectral clustering algorithm, introduc
 # if (!requireNamespace("BiocManager", quietly=TRUE))
 #     install.packages("BiocManager")
 # BiocManager::install("SpectralTAD")
-# devtools::install_github("cresswellkg/SpectralTAD")
+devtools::install_github("cresswellkg/SpectralTAD")
 library(SpectralTAD)
 ```
 
@@ -127,7 +127,7 @@ identical(results, no_res)
 
 One method for filtering TADs is using group-wise silhouette scores. This is done by getting the overall silhouette for each group and removing those with a score of less than .25. A low silhouette score for a given TAD indicates a poor level of connectivity within it.
 
-```{r}
+```{r, message = FALSE}
 #Running SpectralTAD with silhouette score filtering
 qual_filt = SpectralTAD(as.matrix(rao_chr20_25_rep), chr = "chr20", qual_filter = TRUE, z_clust = FALSE, resolution = 25000)
 #Showing quality filtered results
@@ -143,7 +143,7 @@ The results when using the quality filtering option are altered to include a new
 
 Z-score filtering is based on observations about the log-normality of the distance between eigenvector gaps from [@cresswell:2019aa]. Z-score filtering bypasses the uses of silhouette score and defines a TAD boundary as the area between consecutive regions where the z-score of the eigenvector gap is greater than 2.  
 
-```{r}
+```{r, message = FALSE}
 z_filt = SpectralTAD(as.matrix(rao_chr20_25_rep), chr = "chr20", qual_filter = FALSE, z_clust = TRUE, resolution = 25000)
 head(z_filt$Level_1, 5)
 dim(z_filt)
@@ -155,7 +155,7 @@ We can see that TADs found using this method are generally more fine than those 
 
 Our method is specifically designed to find hierarchical TADs. To do so, users must specify how many levels they are interested in using the `levels` parameter. There is no limit to the number of levels but after a certain point no new TADs will be found due to limitations in TAD size or TAD quality. Hierarchies are found by running the algorithm initially and then iteratively running it on sub-TADs until none can be found. At the levels below the initial level we use z-score filtering by default.
 
-```{r}
+```{r, message = FALSE}
 #Running SpectralTAD with 3 levels and no quality filtering
 spec_hier = SpectralTAD(as.matrix(rao_chr20_25_rep), chr = "chr20", resolution = 25000, qual_filter = FALSE, levels = 3)
 #Level 1 remains unchanged
@@ -192,14 +192,29 @@ SpectralTAD_Par(cont_list = cont_list, chr_over = chr_over, labels = labels, cor
 
 The type of matrix input into the algorithm can affect runtimes for the algorithm. n x n matrices require no conversion and are the fastest. Meanwhile, n x (n+3) matrices take slightly longer to run due to the need to remove the first 3 columns. Sparse 3-column matrices have the highest runtimes due to the complexity of converting them to an n x n matrix. The times are summarized below, holding all other parameters constant.
 
-```{r}
+```{r, message = FALSE}
 library(microbenchmark)
 #Converting to nxn
 n_n = HiCcompare::sparse2full(rao_chr20_25_rep)
 #Converting to nxn+3
 n_n_3 = cbind.data.frame("chr20", as.numeric(colnames(n_n)), as.numeric(colnames(n_n))+25000, n_n)
+#Defining each function
+sparse = SpectralTAD(cont_mat = rao_chr20_25_rep, chr = "chr20", qual_filter = FALSE)
+n_by_n = SpectralTAD(cont_mat = n_n, chr = "chr20", qual_filter = FALSE)
+n_by_n_3 =SpectralTAD(cont_mat = n_n_3, chr = "chr20", qual_filter = FALSE)
 
-
-microbenchmark(SpectralTAD(cont_mat = as.matrix(rao_chr20_25_rep), chr = "chr20", qual_filter = FALSE), SpectralTAD(cont_mat = as.matrix(n_n), chr = "chr20", qual_filter = FALSE), SpectralTAD(cont_mat = as.matrix(n_n_3), chr = "chr20", qual_filter = FALSE), unit = "s")
+#Benchmarking different parameters
+microbenchmark(sparse = SpectralTAD(cont_mat = rao_chr20_25_rep, chr = "chr20", qual_filter = FALSE),
+n_by_n = SpectralTAD(cont_mat = n_n, chr = "chr20", qual_filter = FALSE),
+n_by_n_3 =SpectralTAD(cont_mat = n_n_3, chr = "chr20", qual_filter = FALSE), unit = "s", times = 3)
 ```
 
+## Effect of parameters on runtime
+
+Just as the type of data affects runtime, the parameters used to detect TADs do as well. The main bottleneck is the quality filter function which requires the inversion of a matrix and the calculation of silhouette score.
+
+```{r, message = FALSE}
+microbenchmark(quality_filter = SpectralTAD(cont_mat = n_n, chr = "chr20", qual_filter = TRUE, z_clust = FALSE), no_filter = SpectralTAD(cont_mat = n_n, chr = "chr20", qual_filter = FALSE, z_clust = FALSE), z_clust = SpectralTAD(cont_mat = n_n, chr = "chr20", qual_filter = FALSE, z_clust = TRUE), times = 3, unit = "s")
+```
+
+As can be seen using the z-score method is the fastest.
