--- a/vignettes/spectraltad.Rmd
+++ b/vignettes/spectraltad.Rmd
@@ -17,15 +17,15 @@ options(width = 400)
 
 # Introduction
 
-`SpectralTAD` is a package designed to allow for fast hierarchical TAD calling on a wide-variety of data. `SpectralTAD` takes a contact matrix as an input and outputs a bed file containing coordinates corresponding to TAD locations. The package contains two functions, `SpectralTAD` and `SpectralTAD_Par` with SpectralTAD being a simple TAD-caller and `SpectralTAD_Par` being the parallelized version. This package provides flexibility in the data it accepts, allowing for n x n, n x (n+3) and 3-column sparse matrices. There are no parameters required for running the functions, though certain methods for customizing the results are available. The idea is to give users the freedom to control how they call TADs while giving them the option to perform it in an unsupervised manner.
+`SpectralTAD` is a package designed to allow for fast hierarchical TAD calling on a wide-variety of chromatin conformation capture (Hi-C) data. `SpectralTAD` takes a contact matrix as an input and outputs a BED file containing coordinates corresponding to TAD locations. The package contains two functions, `SpectralTAD()` and `SpectralTAD_Par()` with SpectralTAD being a single-CPU TAD-caller and `SpectralTAD_Par` being the parallelized version. This package provides flexibility in the data it accepts, allowing for $n \times n$ (square numerical matrix), $n \times (n+3)$ (square numerical matrix with the additional chromosome, start, end columns), and 3-column sparse matrices (described below). There are no parameters required for running the functions, though certain methods for customizing the results are available. The idea is to give users the freedom to control how they call TADs while giving them the option to perform it in an unsupervised manner.
 
-The package is based around the windowed spectral clustering algorithm, introduced by [@cresswell:2019aa] which is designed to be robust to biases such as sparsity, noise and downsampling. 
+The package is based around the windowed spectral clustering algorithm, introduced by [@cresswell:2019aa] [??? Make references work], which is designed to be robust to sparsity, noise, and sequencing depth of Hi-C data. 
 
 # Getting Started
 
 ## Installation
 
-```{r, eval = TRUE}
+```{r, eval = TRUE, message=FALSE}
 # if (!requireNamespace("BiocManager", quietly=TRUE))
 #     install.packages("BiocManager")
 # BiocManager::install("SpectralTAD")
@@ -35,9 +35,9 @@ library(SpectralTAD)
 
 ## Input data
 
-### Working with n x n matrices
+### Working with $n \times n$ matrices
 
-n x n contact matrices, are most commonly associated with data coming from the Bing Ren lab (http://chromosome.sdsc.edu/mouse/hi-c/download.html). These contact matrices are square and symmetric with entry ij corresponding to the number of contacts between region i and region j. Below is an example of a 5 x 5 region of an n x n contact matrix. Derived from Rao 2014, chromosome 19 data. Note the symmetry
+$n \times n$ contact matrices, are most commonly associated with data coming from the Bing Ren lab (http://chromosome.sdsc.edu/mouse/hi-c/download.html). These contact matrices are square and symmetric with entry $ij$ corresponding to the number of contacts between region $i$ and region $j$. Below is an example of a $5 \times 5$ region of an $n \times n$ contact matrix. Derived from Rao 2014 [??? Add ref and make it working], chromosome 19 data. Note the symmetry around the diagonal - the typical shape of chromatin interaction matrix.
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE}
 data("rao_chr20_25_rep")
@@ -45,17 +45,11 @@ rao_chr20_25_rep = HiCcompare::sparse2full(rao_chr20_25_rep)
 rao_chr20_25_rep[1:5, 1:5]
 ```
 
-### Working with sparse 3-column matrices
+### Working with $n \times (n+3)$ matrices
 
-Sparse 3-column matrices, sometimes referred to as a coordinated lists, are matrices where the first and second column refer to region i and region j of the chromosome and the third column is the number of contacts between them. This style is becoming increasingly common and is associated with raw data from Rao (https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE63525) and data output by the Juicer tool. 3-column matrices are handled internally in the package by converting them to n x n matrices using the `HiCcompare` package's `sparse2full` function. This may add some runtime for large matrices, when compared with n x n matrices. The first 5 rows of a typical sparse 3-column matrix is shown below.
+$n \times (n+3)$ matrices are commonly associated with the TopDom tad-caller (http://zhoulab.usc.edu/TopDom/). These matrices consist of a normal $n \times n$ matrix but with 3 additional leading columns containg the chromosome, the start of the region and the end of the region. Regions in this case are determined by the resolution of the data. The typical $n \times (n+3)$ matrix is shown below.
 
-```{r, echo = FALSE, warning = FALSE}
-head(HiCcompare::full2sparse(rao_chr20_25_rep), 5)
-```
-
-### Working with n x (n+3) matrices
-
-n x (n+3) matrices are commonly associated with the TopDom tad-caller (http://zhoulab.usc.edu/TopDom/). These matrices consist of a normal n x n matrix but with 3 additional leading columns containg the chromosome, the start of the region and the end of the region. Regions in this case are determined by the resolution of the data. The typical n x (n+3) matrix is shown below.
+[??? When compiled, one row number is formatted like 1e+05, while the others are like 125000. Can you make them all similar in numeric notation?]
 
 ```{r, echo = FALSE, warning = FALSE}
 row.names(rao_chr20_25_rep) = NULL
@@ -65,7 +59,15 @@ colnames(sub_mat) = NULL
 sub_mat
 ```
 
-### Working with ther data types
+### Working with sparse 3-column matrices
+
+Sparse 3-column matrices, sometimes referred to as a coordinated lists, are matrices where the first and second column refer to region $i$ and region $j$ of the chromosome, and the third column is the number of contacts between them. This style is becoming increasingly popular and is associated with raw data from Rao (https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE63525), and is the data output produced by the Juicer tool [??? Add reference]. 3-column matrices are handled internally in the package by converting them to $n \times n$ matrices using the `HiCcompare` package's `sparse2full()` function. The first 5 rows of a typical sparse 3-column matrix is shown below.
+
+```{r, echo = FALSE, warning = FALSE}
+head(HiCcompare::full2sparse(rao_chr20_25_rep), 5)
+```
+
+### Working with other data types
 
 Users can also find TADs from data outputted by `cooler` (http://cooler.readthedocs.io/en/latest/index.html) and HiC-Pro (https://github.com/nservant/HiC-Pro) with minor pre-processing using the `HiCcompare` package. 
 
@@ -74,7 +76,7 @@ Users can also find TADs from data outputted by `cooler` (http://cooler.readthed
 We can pre-process and use .cool files using the following steps:
 
 1. Download `.cool` file from (ftp://cooler.csail.mit.edu/coolers)
-2. Convert to text file using `cooler dump --join Rao2014-GM12878-DpnII-allreps-filtered.50kb.cool > Rao.GM12878.50kb.txt
+2. Convert to text file using `cooler dump --join Rao2014-GM12878-DpnII-allreps-filtered.50kb.cool > Rao.GM12878.50kb.txt` [??? Describe how to install cooler]
 3. Run the code below
 
 ```{r, eval = FALSE}
@@ -84,7 +86,6 @@ cool_mat = read.table("Rao.GM12878.50kb.txt")
 sparse_mat = HiCcompare::cooler2sparse(cool_mat)
 #Run SpectralTAD
 spec_tad = SpectralTAD(sparse_mat, chr = "chr20")
-
 ```
 
 #### Working with HiC-Pro files
@@ -99,7 +100,6 @@ bed = read.table("Rao.GM12878.50kb.bed")
 sparse_mat = HiCcompare::hicpro2bedpe(mat, bed)
 #Run SpectralTAD
 SpectralTAD(sparse_mat, chr = "chr20")
-
 ```
 
 ## Running SpectralTAD
@@ -190,7 +190,7 @@ SpectralTAD_Par(cont_list = cont_list, chr_over = chr_over, labels = labels, cor
 
 ## Effect of matrix type on runtime
 
-The type of matrix input into the algorithm can affect runtimes for the algorithm. n x n matrices require no conversion and are the fastest. Meanwhile, n x (n+3) matrices take slightly longer to run due to the need to remove the first 3 columns. Sparse 3-column matrices have the highest runtimes due to the complexity of converting them to an n x n matrix. The times are summarized below, holding all other parameters constant.
+The type of matrix input into the algorithm can affect runtimes for the algorithm. $n \times n$ matrices require no conversion and are the fastest. Meanwhile, $n \times (n+3)$ matrices take slightly longer to run due to the need to remove the first 3 columns. Sparse 3-column matrices have the highest runtimes due to the complexity of converting them to an $n \times n$ matrix. The times are summarized below, holding all other parameters constant.
 
 ```{r, message = FALSE}
 library(microbenchmark)
