--- a/vignettes/SpectralTAD.Rmd
+++ b/vignettes/SpectralTAD.Rmd
@@ -46,7 +46,7 @@ The package is based around the windowed spectral clustering algorithm, introduc
 # if (!requireNamespace("BiocManager", quietly=TRUE))
 #     install.packages("BiocManager")
 # BiocManager::install("SpectralTAD")
-devtools::install_github("cresswellkg/SpectralTAD")
+#devtools::install_github("cresswellkg/SpectralTAD")
 library(SpectralTAD)
 ```
 
