--- a/vignettes/SpectralTAD.Rmd
+++ b/vignettes/SpectralTAD.Rmd
@@ -42,13 +42,19 @@ The package is based around the windowed spectral clustering algorithm, introduc
 
 ## Installation
 
-```{r, eval = TRUE, message=FALSE}
+```{r, eval = FALSE, message=FALSE}
 # if (!requireNamespace("BiocManager", quietly=TRUE))
 #     install.packages("BiocManager")
 # BiocManager::install("SpectralTAD")
 devtools::install_github("cresswellkg/SpectralTAD")
 library(SpectralTAD)
 ```
+
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+library(SpectralTAD)
+```
+
 
 ## Input data
 
@@ -85,7 +91,7 @@ head(HiCcompare::full2sparse(rao_chr20_25_rep), 5)
 
 ### Working with other data types
 
-Users can also find TADs from data outputted by `cooler` (http://cooler.readthedocs.io/en/latest/index.html) and HiC-Pro (https://github.com/nservant/HiC-Pro) with minor pre-processing using the `HiCcompare` package. 
+Users can also find TADs from data output by `cooler` (http://cooler.readthedocs.io/en/latest/index.html) and HiC-Pro (https://github.com/nservant/HiC-Pro) with minor pre-processing using the `HiCcompare` package. 
 
 #### Working with .cool files
 
@@ -191,7 +197,7 @@ Though, it has been shown that windowed spectral clustering is more robust to sp
 
 ## Running SpectralTAD with parallelization
 
-It is sometimes the case that people want to run SpectralTAD on multiple chromosomes at once in parallel. This can be done using the `SpectralTAD_Par` function. SpectralTAD_Par is identical to SpectralTAD but takes a list of contact matrices as an input. These matrices can be of any of the allowable types and mixing of types is allowed. Users are required to provide a vector of chromosomes, `chr_over`, where it is ordered such that each entry matches up with its corresponding contact matrix in the list of matrices. Users can also input list names using the `labels` parameter. In terms of parallelization, users can either input the number of cores they would like to use or the function will automatically use 1 less than the total number of cores on the computer in which it is ran. The function works on Linux/Mac and Windows with automatic OS detection built in. We show the steps below.
+It is sometimes the case that people want to run SpectralTAD on multiple chromosomes at once in parallel. This can be done using the `SpectralTAD_Par` function. SpectralTAD_Par is identical to SpectralTAD but takes a list of contact matrices as an input. These matrices can be of any of the allowable types and mixing of types is allowed. Users are required to provide a vector of chromosomes, `chr_over`, where it is ordered such that each entry matches up with its corresponding contact matrix in the list of matrices. Users can also input list names using the `labels` parameter. In terms of parallelization, users can either input the number of cores they would like to use or the function will automatically use 1 less than the total number of cores on the computer on which it is ran. The function works on Linux/Mac and Windows with automatic OS detection built in. We show the steps below.
 
 ```{r, eval = FALSE}
 #Creating replicates of our HiC data for demonstration
