--- a/vignettes/pack_ref.bib
+++ b/vignettes/pack_ref.bib
@@ -1,13 +1,5 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% https://bibdesk.sourceforge.io/
+% Encoding: UTF-8
 
-%% Created for Mikhail Dozmorov at 2018-12-17 08:14:30 -0500 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-@comment{jabref-meta: databaseType:bibtex;}
 
 @article{Rao:2014aa,
 	Author = {Suhas~S.P. Rao and Miriam~H. Huntley and Neva~C. Durand and Elena~K. Stamenova and Ivan~D. Bochkov and James~T. Robinson and Adrian~L. Sanborn and Ido Machol and Arina~D. Omer and Eric~S. Lander and Erez~Lieberman Aiden},
@@ -34,3 +26,14 @@
 	Volume = {3},
 	Year = {2016},
 	Bdsk-Url-1 = {https://doi.org/10.1016/j.cels.2016.07.002}}
+
+@Article{Cresswell:2019aa,
+  author    = {Kellen G Cresswell and John C Stansfield and Mikhail G Dozmorov},
+  title     = {{SpectralTAD}: an R package for defining a hierarchy of Topologically Associated Domains using spectral clustering},
+  year      = {2019},
+  month     = {feb},
+  doi       = {10.1101/549170},
+  publisher = {Cold Spring Harbor Laboratory},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
