--- a/vignettes/pack_ref.bib
+++ b/vignettes/pack_ref.bib
@@ -27,7 +27,7 @@
 	Year = {2016},
 	Bdsk-Url-1 = {https://doi.org/10.1016/j.cels.2016.07.002}}
 
-@Article{Cresswell:2019aa,
+@Article{cresswell:2019aa,
   author    = {Kellen G Cresswell and John C Stansfield and Mikhail G Dozmorov},
   title     = {{SpectralTAD}: an R package for defining a hierarchy of Topologically Associated Domains using spectral clustering},
   year      = {2019},
